final-project/kubernetes/istio/circuit-breaker/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: payments-api-circuit-breaker
  namespace: meshcommerce
spec:
  host: payments-api.meshcommerce.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: v1
    - name: v2
      labels:
        app.kubernetes.io/version: v2
    - name: faulty
      labels:
        app.kubernetes.io/version: faulty
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 1s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
      minHealthPercent: 0
